{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 131,
  "lineage": "5c3d8250-c3e7-6c4b-26b6-eaf2d3884429",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f2e92ab9be581d3",
            "arn": "arn:aws:ec2:eu-west-2:387390481270:elastic-ip/eipalloc-09f2e92ab9be581d3",
            "association_id": "eipassoc-03f1575b0afa2a2ad",
            "domain": "vpc",
            "id": "eipalloc-09f2e92ab9be581d3",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d2a9f9e6f6dc79fb",
            "private_dns": "ip-10-0-101-162.eu-west-2.compute.internal",
            "private_ip": "10.0.101.162",
            "public_dns": "ec2-18-135-43-178.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.43.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pearlpay-nat-eip"
            },
            "tags_all": {
              "Name": "pearlpay-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pearlpay",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pearlpay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:internet-gateway/igw-01cd79d526b867e90",
            "id": "igw-01cd79d526b867e90",
            "owner_id": "387390481270",
            "tags": {
              "Name": "pearlpay-igw"
            },
            "tags_all": {
              "Name": "pearlpay-igw"
            },
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pearlpay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f2e92ab9be581d3",
            "association_id": "eipassoc-03f1575b0afa2a2ad",
            "connectivity_type": "public",
            "id": "nat-05c3d07e1e4587713",
            "network_interface_id": "eni-0d2a9f9e6f6dc79fb",
            "private_ip": "10.0.101.162",
            "public_ip": "18.135.43.178",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eff5674559121b3f",
            "tags": {
              "Name": "pearlpay-nat"
            },
            "tags_all": {
              "Name": "pearlpay-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pearlpay",
            "aws_subnet.public_a",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:route-table/rtb-081859c5c3f6e0093",
            "id": "rtb-081859c5c3f6e0093",
            "owner_id": "387390481270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c3d07e1e4587713",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pearlpay-private-rt"
            },
            "tags_all": {
              "Name": "pearlpay-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pearlpay",
            "aws_nat_gateway.pearlpay",
            "aws_subnet.public_a",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:route-table/rtb-0443b131e80d0b151",
            "id": "rtb-0443b131e80d0b151",
            "owner_id": "387390481270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cd79d526b867e90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pearlpay-public-rt"
            },
            "tags_all": {
              "Name": "pearlpay-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pearlpay",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034c9167cde9685ce",
            "route_table_id": "rtb-081859c5c3f6e0093",
            "subnet_id": "subnet-0dc1dd32c048127cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pearlpay",
            "aws_nat_gateway.pearlpay",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b13a40691ed9bc",
            "route_table_id": "rtb-081859c5c3f6e0093",
            "subnet_id": "subnet-0be796a4ac37a7fa6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pearlpay",
            "aws_nat_gateway.pearlpay",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faceebb69ea88cce",
            "route_table_id": "rtb-0443b131e80d0b151",
            "subnet_id": "subnet-0eff5674559121b3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pearlpay",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0927d624d0adac80e",
            "route_table_id": "rtb-0443b131e80d0b151",
            "subnet_id": "subnet-0a4166d97db85e0b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pearlpay",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:security-group/sg-0018e17bf1de056a8",
            "description": "Allow API traffic only from the load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL traffic to database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0147f4a11eb45f6df"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0018e17bf1de056a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API traffic from load balancer",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089baff8ca3cf9a48"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "pearlpay-api",
            "name_prefix": "",
            "owner_id": "387390481270",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:security-group/sg-0147f4a11eb45f6df",
            "description": "Allow database traffic only from the API",
            "egress": [],
            "id": "sg-0147f4a11eb45f6df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from API",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0018e17bf1de056a8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pearlpay-database",
            "name_prefix": "",
            "owner_id": "387390481270",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:security-group/sg-089baff8ca3cf9a48",
            "description": "Allow public HTTP and HTTPS traffic to the load balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Forward traffic to API security group",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0018e17bf1de056a8"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-089baff8ca3cf9a48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pearlpay-load-balancer",
            "name_prefix": "",
            "owner_id": "387390481270",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api_egress_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL traffic to database",
            "from_port": 5432,
            "id": "sgrule-2621102351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0018e17bf1de056a8",
            "security_group_rule_id": "sgr-0cf7898dfde1c7382",
            "self": false,
            "source_security_group_id": "sg-0147f4a11eb45f6df",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.database",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api_ingress_from_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "API traffic from load balancer",
            "from_port": 8000,
            "id": "sgrule-558326397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0018e17bf1de056a8",
            "security_group_rule_id": "sgr-060b99bebc61a54f6",
            "self": false,
            "source_security_group_id": "sg-089baff8ca3cf9a48",
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.load_balancer",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_ingress_from_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from API",
            "from_port": 5432,
            "id": "sgrule-2008878241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0147f4a11eb45f6df",
            "security_group_rule_id": "sgr-0d7886cf62e220618",
            "self": false,
            "source_security_group_id": "sg-0018e17bf1de056a8",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.database",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_api_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Forward traffic to API security group",
            "from_port": 8000,
            "id": "sgrule-3883176931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089baff8ca3cf9a48",
            "security_group_rule_id": "sgr-036f26a075358c20e",
            "self": false,
            "source_security_group_id": "sg-0018e17bf1de056a8",
            "timeouts": null,
            "to_port": 8000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.load_balancer",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgrule-3930017534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089baff8ca3cf9a48",
            "security_group_rule_id": "sgr-0f6a17b6bf4e03e1b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS from internet",
            "from_port": 443,
            "id": "sgrule-3178768489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089baff8ca3cf9a48",
            "security_group_rule_id": "sgr-06f61a00148cfdc4c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:subnet/subnet-0dc1dd32c048127cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc1dd32c048127cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387390481270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pearlpay-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "pearlpay-private-eu-west-2a"
            },
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:subnet/subnet-0be796a4ac37a7fa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be796a4ac37a7fa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "387390481270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pearlpay-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "pearlpay-private-eu-west-2b"
            },
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:subnet/subnet-0eff5674559121b3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eff5674559121b3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387390481270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pearlpay-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "pearlpay-public-eu-west-2a"
            },
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:subnet/subnet-0a4166d97db85e0b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4166d97db85e0b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387390481270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pearlpay-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "pearlpay-public-eu-west-2b"
            },
            "vpc_id": "vpc-079a02695adfa0ba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pearlpay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pearlpay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:387390481270:vpc/vpc-079a02695adfa0ba0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082d940611c044f77",
            "default_route_table_id": "rtb-039ec9f6b03152be7",
            "default_security_group_id": "sg-0cca546ff708fade7",
            "dhcp_options_id": "dopt-0535e249c7cabb72b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079a02695adfa0ba0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039ec9f6b03152be7",
            "owner_id": "387390481270",
            "tags": {
              "Name": "pearlpay-vpc"
            },
            "tags_all": {
              "Name": "pearlpay-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}